# ai4028-fe

./: .gitignore  Dockerfile  asd.txt  publications_summarized.txt  pyproject.toml  streamlit_app.py
.github/workflows/: build_and_deploy.yaml
.streamlit/: config.toml
example_app/: AI대학원.py  LAB1.py  네트워크기반 지능 연구실.py  물리광과학과.py  의생명공학부.py
