[tool.poetry]
name = "ai4028"
version = "0.1.0"
description = ""
authors = ["fkkjs430"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
streamlit = ">=1.10.0"
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
tox = "^3.27.1"
st-pages = "^0.4.5"
pytest-playwright = "^0.3.0"
openai = "^1.30.5"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
kiwipiepy = "^0.17.1"
langdetect = "^1.0.9"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
